# voxblox_ground_truth

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: debug_ply_importer.rviz
include/voxblox_ground_truth/: common.h  distance_to_triangle.h  gazebo_plugin.h  point_in_triangle_2d.h  sdf_creator.h  sdf_visualizer.h  triangle_geometer.h
include/voxblox_ground_truth/io/: CPPLINT.cfg  tinyply.h
include/voxblox_ground_truth/user_interfaces/: gazebo_plugin.h
launch/: debug.launch  debug_gazebo_plugin.launch  debug_ply_importer.launch  gazebo_plugin_demo.launch  ply_importer_demo.launch  ply_sraas.launch
sample_data/gazebo/worlds/: burning_building_rubble.world
sample_data/ply/: bun_zipper.ply
src/: gazebo_plugin.cpp  main.cpp  sdf_creator.cpp  sdf_visualizer.cpp  triangle_geometer.cpp
src/io/: CPPLINT.cfg  tinyply.cpp
src/user_interfaces/: gazebo_plugin.cpp  ply_to_sdf_normals.cpp  ply_to_sdf_script.cpp
