<?xml version="1.0"?>
<package format="2">
  <name>voxblox_ground_truth</name>
  <version>1.0.0</version>
  <description>The voxblox_ground_truth package</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>

  <author>Victor Reijgwart</author>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>voxblox</build_depend>
  <build_depend>voxblox_ros</build_depend>
  <build_depend>gazebo</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>voxblox</exec_depend>
  <exec_depend>voxblox_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>

</package>
