<?xml version="1.0"?>
<package format="2">
  <name>voxblox_ground_truth</name>
  <version>1.0.0</version>
  <description>The voxblox_ground_truth package</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>

  <author>Victor Reijgwart</author>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox_msgs</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>

</package>
